--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# スラッシュ(/)で終わる場合はディレクトリのみを表す
+# スラッシュで始まる場合はルートディレクトリからを表す
+# どこにもスラッシュがない場合は、シェルのglobパターンとしてファイル名のベース部分にマッチするか検査される
+# 複数マッチするパターンがある場合は、最後にマッチするものが優先される
+# ex.
+# *~
+#   ファイルの最後に~があるすべてのファイル.index.html~など
+# *.[ao]
+#   拡張子がa or oのファイル
+# t/
+#   tディレクトリはすべて無視される
+# v
+#   ファイル名がvの場合無視されるがvがディレクトリ名の場合は無視されない
+# !*.t
+#   拡張子tを持つファイルは無視されない
 **/.netrwhist
+.DS_Store
+dict/colors
+dict/indent
+dict/undo/
