'テンプレートファイルを修正しました。'

--- a/donotUse/.vimrc.template
+++ b/donotUse/.vimrc.template
@@ -1,7 +1,6 @@
 "=============================================================================
-"    Description: Windows用設定
-"         Author: Shintaro Kurosawa
-"  Last Modified: 2014-05-08 09:08
+"    Description:
+"  Last Modified: 2014-05-08
 "        Version: 1.0
 "=============================================================================
 "----------------------------------------
