add ignore file '.vimrc.local'

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# スラッシュ(/)で終わる場合はディレクトリのみを表す
+﻿# スラッシュ(/)で終わる場合はディレクトリのみを表す
 # スラッシュで始まる場合はルートディレクトリからを表す
 # どこにもスラッシュがない場合は、シェルのglobパターンとしてファイル名のベース部分にマッチするか検査される
 # 複数マッチするパターンがある場合は、最後にマッチするものが優先される
@@ -18,3 +18,4 @@
 dict/colors
 dict/indent
 dict/undo/
+.vimrc.local
